Bug 1354060 - Put defaultParagraphSeparator default change behind pref; r=masayuki

This is regression-prone, so dev.platform discussion concluded we want
it behind a pref.  We might turn the pref off for beta and/or release
for now as well.

MozReview-Commit-ID: 2H2et3RElZx